# belem-contratos

./: DFD-Sistema-Gestao-Contratos.md  ETP-Sistema-Gestao-Contratos.md  ONBOARDING.md  TR-Sistema-Gestao-Contratos.md  arcanjo-login.html  build.js  index.html  package-lock.json  package.json  vercel.json
claude/: assessor-ia-server.js  launch.json  monitor-server.js  server.js
claude/.claude/: launch.json
claude/monitor-ui/: index.html
ocr-api/: .dockerignore  DEPLOY.md  Dockerfile  LICENSE  README.md  pyproject.toml
ocr-api/api/: README.md  frontend-snippet.js  main.py  requirements.txt
ocr-api/nota_fiscal_ocr/: __init__.py  __main__.py  cli.py  extractor.py  patterns.py
